# agentcore-testing

./: .gitignore  README.md  investment_gateway_config.json
gateway/: alpaca_orders_spec.yaml  alpha_vantage_spec.yaml
scripts/: build_and_push.sh  get_cognito_secret.py  get_existing_gateway.py  get_gateway_token.py  setup_investment_gateway.py
src/agents/: agent_native_memory.py  agent_runtime.py  agent_with_code_interpretter_tool.py  investment_bot_gateway.py
src/docker/: .gitignore  Dockerfile.investment  Dockerfile.native  Dockerfile.runtime  pyproject.toml  requirements.txt
tests/: test_agent_runtime.py  test_code_interpreter.py  test_investment_bot.py  test_memory_primitive.py  test_stm_native.py
